2014-09-20  Georg-Johann Lay  <avr@gjlay.de>

	Pretty-print SREG, flags and bits.

	* sreg.h (s_SREG): New variable.

	* avr-insn.def (BCLR, BLD, BRBC, BRBS, BSET, BST, CBI, SBI)
	(SBIS, SBIC, SBRC, SBRS) [NAME]: Use '*' as placeholder for
	bits printed by log_put_bit.

	* avrtest.c (exit_status_text): Move up.
	(mask_to_bit, log_put_bit): New functions.
	(log_add_instr): Use them to fix '*' in NAMEs of: BCLR,
	BLD, BRBC, BRBS, BSET, BST, CBI, SBI, SBIS, SBIC, SBRC, SBRS.
	Change argument to decoded_op*.
	(do_step): Pass decoded_op* to log_add_instr.
	(log_add_immed): New function.
	(func_ANDI, func_ORI, func_CPI, func_SBCI_SUBI, func_ADIW)
	(func_ADIW): Call it.
	(update_flags, do_subtraction_8): Use data_read_byte_raw for SREG.
	(data_read_byte, data_write_byte): Use special format for SREG.
	(log_add_data_mov): Pretty print EIND, RAMPZ.  Print SREG
	as 'CZNVSHTI' instead of as hex value.

2014-09-20  Georg-Johann Lay  <avr@gjlay.de>

	* avr-insn.def (CLR, LSL, ROL, TST): New shortcuts.
	* avrtest.c (decode_opcode): Decode them.
	(func_CLR, func_LSL, func_ROL, func_TST): New to implement them.
	(do_shift_8): New function.

2014-09-20  Georg-Johann Lay  <avr@gjlay.de>

	* avr-insn.def (NAME): Remove redundant r's.

2014-09-19  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (NOINLINE, NORETURN): New defines.
	(leave): Use them.
	(opcode_t): Remove .hreadable if !LOG_DUMP.
	(AVR_INSN): Adjust.
	(FASTCALL): New define.
	(OP_FUNC_TYPE): Use it.

2014-09-19  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (flag-tables): New phony to build flag-tables.c.
	(flag-tables.c): Remove rule to build.
	(exe): Rename to EXEEXT resp. BUILD_EXEEXT.
	(AVRGCC): Rename to CC_FOR_AVR.
	(CFLAGS_FOR_HOST, CFLAGS_FOR_AVR): New.
	(CC_FOR_BUILD, CFLAGS_FOR_BUILD): New variables.
	(gen-flag-tables): Use them instead of CC, CFLAGS.
	(all-xmega, exit-xmega): Remove dead rules.

	Revert to 2014-09-18 trunk r129: Undo:

	* gen-flag-tables.c (main): Accept argv[1] as input file name.
